Events detail html + css layout

--- a/events-detail.html
+++ b/events-detail.html
@@ -1,7 +1,49 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>events detail карточка мероприятия</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="parent">
+      <a href="/news.html">Наши мероприятия</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Конференция по процессной аналитике</div>
+  </div>
 </div>
+
+<div class="ne-detail-page">
+  <div class="container">
+    <div class="ne-detail-title">Конференция по процессной аналитике</div>
+    <div class="ne-detail-content">
+      <div class="ne-detail-image">
+        <img src="/images/temp-events-image1.jpg" alt="">
+      </div>
+      <div class="ne-detail-desciption">
+        <p>Современный мир бизнеса характеризуется беспрецедентной динамикой и объемом данных. В этих условиях процессная аналитика становится ключевым инструментом для повышения эффективности и оптимизации бизнес-процессов. Конференция по процессной аналитике – это площадка для обмена опытом, знаниями и лучшими практиками в этой быстро развивающейся области.</p>
+        <p>На конференции будут представлены доклады ведущих экспертов, кейсы успешного применения процессной аналитики в различных отраслях, а также мастер-классы по использованию современных инструментов и технологий. Особое внимание будет уделено вопросам интеграции процессной аналитики с другими системами, такими как CRM и ERP, а также применению машинного обучения для прогнозирования и автоматизации бизнес-процессов.</p>
+        <p>Участники конференции получат уникальную возможность расширить свои профессиональные знания, установить новые деловые контакты и узнать о последних тенденциях в области процессной аналитики. Это мероприятие будет полезно для руководителей, аналитиков, ИТ-специалистов и всех, кто заинтересован в повышении эффективности бизнеса с помощью анализа данных.</p>
+      </div>
+    </div>
+
+    <ul class="pager">
+      <li class="pager-item pager-item-nav pager-item-previous">
+        <a href="#" class="pager-item-link" rel="prev">Назад</a>
+      </li>
+      <li class="pager-item pager-item-nav pager-item-next">
+          <a href="#" class="pager-item-link" rel="next">Вперед</a>
+        </li>
+    </ul>
+    
+  </div>
+</div>
+
+
+
+<script>
+  const topMenuItemActive = 3;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
