--- a/news-detail.html
+++ b/news-detail.html
@@ -14,14 +14,14 @@
   </div>
 </div>
 
-<div class="news-detail-page">
+<div class="ne-detail-page">
   <div class="container">
-    <div class="news-detail-title">Samsung QH98C – всегда в центре внимания аудитории</div>
-    <div class="news-detail-content">
-      <div class="news-detail-image">
-        <img src="/images/temp-news-detail.jpg" alt="">
+    <div class="ne-detail-title">Samsung QH98C – всегда в центре внимания аудитории</div>
+    <div class="ne-detail-content">
+      <div class="ne-detail-image">
+        <img src="/images/temp-news-image6.jpg" alt="">
       </div>
-      <div class="news-detail-desciption">
+      <div class="ne-detail-desciption">
         <p>Бренд StudioLogic был создан в Италии Лино Рагни, владельцем фирмы Fatar. Первый продукт, выпущенный StudioLogic в 1986 году – цифровые клавишные Studio 88. Сейчас продукция компании экспортируется в 65 стран мира, ассортимент включает профессиональные электронные клавишные инструменты: синтезаторы, MIDI контроллеры, цифровые пианино и органы.</p>
         <p>Samsung – это глобальный технологический лидер, чье имя стало синонимом инноваций и передовых разработок. Основанная в 1938 году как торговая компания, Samsung со временем превратилась в многопрофильный конгломерат, охватывающий электронику, строительство, судостроение, и, конечно же, информационные технологии.</p>
         <p>В сфере электроники Samsung занимает лидирующие позиции в производстве телевизоров, смартфонов, бытовой техники и полупроводников. Компания постоянно инвестирует в исследования и разработки, стремясь создавать продукты, которые улучшают жизнь людей и предвосхищают их потребности.</p><p>Samsung Electronics – это центр инноваций, где рождаются новые технологии и дизайнерские решения. Компания активно сотрудничает с ведущими университетами и научно-исследовательскими институтами по всему миру, стремясь оставаться на передовой научно-технического прогресса.</p>
