Publications detail html + css layout

--- a/events-detail.html
+++ b/events-detail.html
@@ -7,7 +7,7 @@
     </div>
     <div class="separator">/</div>
     <div class="parent">
-      <a href="/news.html">Наши мероприятия</a>
+      <a href="/events.html">Наши мероприятия</a>
     </div>
     <div class="separator">/</div>
     <div class="active">Конференция по процессной аналитике</div>
