--- a/parts/header.html
+++ b/parts/header.html
@@ -50,7 +50,7 @@
           <a href="/events.html" class="menu-item__link">Мероприятия</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">Публикации</a>
+          <a href="/publications.html" class="menu-item__link">Публикации</a>
         </div>
         <div class="menu-item">
           <a href="#" class="menu-item__link">Скачать</a>
