--- a/publications-detail.html
+++ b/publications-detail.html
@@ -1,7 +1,47 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>publications-detail карточка публикации</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="parent">
+      <a href="/publications.html">Публикации</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Перспективные технологии обеспечения информационной безопасности</div>
+  </div>
 </div>
+
+<div class="ne-detail-page">
+  <div class="container">
+    <div class="ne-detail-title">Перспективные технологии обеспечения информационной безопасности</div>
+    <div class="ne-detail-content">
+      <div class="ne-detail-image">
+        <img src="/images/temp-publications-image1.jpg" alt="">
+      </div>
+      <div class="ne-detail-desciption">
+        <p>В эпоху стремительной цифровизации вопросы информационной безопасности приобретают первостепенное значение. Классические методы защиты, такие как брандмауэры и антивирусное ПО, уже не всегда справляются с растущим объемом и сложностью угроз. Необходимы инновационные подходы, способные предвидеть и нейтрализовать потенциальные риски.</p>
+        <p>Одним из перспективных направлений является использование искусственного интеллекта (ИИ) и машинного обучения (МО). Системы, основанные на ИИ, способны анализировать огромные массивы данных, выявлять аномалии и прогнозировать кибератаки. МО позволяет адаптировать защиту в режиме реального времени, обучаясь на новых угрозах и совершенствуя алгоритмы обнаружения.</p>
+        <p>Другой многообещающей технологией является блокчейн. Децентрализованная структура блокчейна обеспечивает высокую степень защиты данных от несанкционированного доступа и изменений. Блокчейн может использоваться для безопасного хранения и обмена информацией, аутентификации пользователей и защиты интеллектуальной собственности.</p>
+      </div>
+    </div>
+
+    <ul class="pager">
+      <li class="pager-item pager-item-nav pager-item-previous">
+        <a href="#" class="pager-item-link" rel="prev">Назад</a>
+      </li>
+      <li class="pager-item pager-item-nav pager-item-next">
+          <a href="#" class="pager-item-link" rel="next">Вперед</a>
+        </li>
+    </ul>
+    
+  </div>
+</div>
+
+<script>
+  const topMenuItemActive = 4;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
