--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,172 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>publications</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Публикации</div>
+  </div>
 </div>
+
+
+<div class="ep-page publicaitons-page">
+  <div class="container">
+    <div class="page-title">Публикации</div>
+
+    <div class="ep publications">
+      <div class="ep-item">
+        <div class="ep-item-image-wrapper">
+          <div class="ep-item__image">
+            <img src="/images/temp-publications-image1.jpg" alt="">
+          </div>
+          <div class="ep-item__date">28.02.2024</div>
+          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__time">20:00 мск</div>
+          <div class="ep-item__filter"></div>
+        </div>
+        <div class="ep-item__content">
+          <div class="ep-item__title">Как прийти к идеальному NGFW?</div>
+          <div class="ep-item__description">Новые экранизации Стивена Кинга («Обезьяна» и «Бегущий человек»), вероятно, последняя «Миссия невыполнима», новые ленты Пон Джун-хо, Джима Джармуша и Селин Сон.</div>
+          <a href="/publications-detail.html" class="ep-item-detail-btn">
+            <span class="ep-item-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="ep-item-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="ep-item">
+        <div class="ep-item-image-wrapper">
+          <div class="ep-item__image">
+            <img src="/images/temp-publications-image2.jpg" alt="">
+          </div>
+          <div class="ep-item__date">28.02.2024</div>
+          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__time">20:00 мск</div>
+          <div class="ep-item__filter"></div>
+        </div>
+        <div class="ep-item__content">
+          <div class="ep-item__title">Импортонезависимость ИТ-отрасли и задачи кибербезопасности</div>
+          <div class="ep-item__description">35-й фильм киновселенной Marvel и первый из трех супергеройских блокбастеров, запланированных студией на 2025 год. «Новый мир» представит нового Капитана Америка — Сэма Уилсона</div>
+          <a href="/publications-detail.html" class="ep-item-detail-btn">
+            <span class="ep-item-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="ep-item-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="ep-item">
+        <div class="ep-item-image-wrapper">
+          <div class="ep-item__image">
+            <img src="/images/temp-publications-image3.jpg" alt="">
+          </div>
+          <div class="ep-item__date">28.02.2024</div>
+          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__time">20:00 мск</div>
+          <div class="ep-item__filter"></div>
+        </div>
+        <div class="ep-item__content">
+          <div class="ep-item__title">Центры обработки данных (ЦОДы) и облачные решения. Сохранение и защищенное использование больших данных</div>
+          <div class="ep-item__description">Формально обновленная киновселенная DC под руководством Джеймса Ганна и Питера Сафрана стартовала в декабре 2024 года — с мультсериала «Монстры-коммандос».</div>
+          <a href="/publications-detail.html" class="ep-item-detail-btn">
+            <span class="ep-item-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="ep-item-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="ep-item">
+        <div class="ep-item-image-wrapper">
+          <div class="ep-item__image">
+            <img src="/images/temp-publications-image4.jpg" alt="">
+          </div>
+          <div class="ep-item__date">28.02.2024</div>
+          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__time">20:00 мск</div>
+          <div class="ep-item__filter"></div>
+        </div>
+        <div class="ep-item__content">
+          <div class="ep-item__title">Российские системы управления информацией о безопасности и управления событиями безопасности</div>
+          <div class="ep-item__description">Вторая по счету перезагрузка легендарной супергеройской команды — на этот раз под эгидой КВМ (за прошлые версии отвечала 20th Century Fox, теперь поглощенная Disney)</div>
+          <a href="/publications-detail.html" class="ep-item-detail-btn">
+            <span class="ep-item-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="ep-item-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="ep-item">
+        <div class="ep-item-image-wrapper">
+          <div class="ep-item__image">
+            <img src="/images/temp-publications-image5.jpg" alt="">
+          </div>
+          <div class="ep-item__date">28.02.2024</div>
+          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__time">20:00 мск</div>
+          <div class="ep-item__filter"></div>
+        </div>
+        <div class="ep-item__content">
+          <div class="ep-item__title">Вопросы международной информационной безопасности. Экономика данных и обеспечение доверия на международном уровне</div>
+          <div class="ep-item__description">Дуэт Энтони и Джо Руссо («Мстители: Финал» и «Война бесконечности») экранизировали одноименный графический роман про девушку, которая вместе с роботом ищет пропавшего брата</div>
+          <a href="/publications-detail.html" class="ep-item-detail-btn">
+            <span class="ep-item-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="ep-item-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="ep-item">
+        <div class="ep-item-image-wrapper">
+          <div class="ep-item__image">
+            <img src="/images/temp-publications-image6.jpg" alt="">
+          </div>
+          <div class="ep-item__date">28.02.2024</div>
+          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__time">20:00 мск</div>
+          <div class="ep-item__filter"></div>
+        </div>
+        <div class="ep-item__content">
+          <div class="ep-item__title">Перспективные технологии обеспечения информационной безопасности</div>
+          <div class="ep-item__description">Тренд на экранизацию видеоигр продолжается — на этот раз на роль большого блокбастера претендует адаптация всемирного инди-хита, в котором не было никакого сюжета.</div>
+          <a href="/publications-detail.html" class="ep-item-detail-btn">
+            <span class="ep-item-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="ep-item-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <ul class="pager">
+      <li class="pager-item pager-item-nav pager-item-previous">
+        <a href="#" class="pager-item-link" rel="prev">Назад</a>
+      </li>
+      <div class="numbers">
+        <li class="pager-item active">
+          <span class="pager-item-span">1</span>
+        </li>
+        <li class="pager-item">
+          <a href="#" class="pager-item-link">2</a>
+        </li>
+        <li class="pager-item">
+          <a href="#" class="pager-item-link">3</a>
+        </li>
+        <li class="pager-item">
+          <a href="#" class="pager-item-link">4</a>
+        </li>
+        <li class="pager-item">
+          <a href="#" class="pager-item-link">5</a>
+        </li>
+      </div>
+      <li class="pager-item pager-item-nav pager-item-next">
+        <a href="#" class="pager-item-link" rel="next">Вперед</a>
+      </li>
+    </ul>
+
+  </div>
+</div>
+
+
+
+
+<script>
+  const topMenuItemActive = 4;
+</script>
+
 
 <!--#include virtual="/parts/footer.html" -->
