--- a/expertise.html
+++ b/expertise.html
@@ -1,7 +1,165 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>expertise экспертиза</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Экспертиза</div>
+  </div>
 </div>
+
+<div class="expertise-page">
+  <div class="title-section section">
+    <div class="container">
+      <div class="flex-container">
+        <div class="title-wrapper">
+          <div class="page-title">Экспертиза</div>
+          <div class="expertise-subtitle">Наш статус ИТ–эксперта на рынке — это опыт и компетенции наших сотрудников</div>
+          <div class="expertise-description">Сертифицированные специалисты ECOPRO-AV работают по всей России – они доступны для дилеров и их заказчиков как в Москве, так и далеко за ее пределами. Они участвуют в пресейле и продажах, генерации потребностей, инжиниринге.</div>
+        </div>
+        <div class="expertise-image">
+          <img src="/images/expertise.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="experts-section section">
+    <div class="container">
+      <div class="experts">
+        <div class="experts-item">
+          <div class="experts-item__title">680+ Специалистов</div>
+          <div class="experts-item__description">Сертифицированные специалисты ECOPRO-AV работают по всей России – они доступны для дилеров и их заказчиков как в Москве, так и далеко за ее пределами. Они участвуют в пресейле и продажах, генерации потребностей, инжиниринге</div>
+        </div>
+        <div class="experts-item">
+          <div class="experts-item__title">680+ Специалистов</div>
+          <div class="experts-item__description">Их опыт охватывает все этапы создания современных аудиовизуальных комплексов, от первоначальной консультации и разработки концепции до финальной настройки и ввода в эксплуатацию. Благодаря глубокому знанию оборудования и технологий, специалисты ECOPRO-AV способны предложить оптимальные решения, отвечающие самым высоким требованиям и бюджетным ограничениям.</div>
+        </div>
+        <div class="experts-item">
+          <div class="experts-item__title">680+ Специалистов</div>
+          <div class="experts-item__description">Важным аспектом их работы является поддержка дилеров. Они предоставляют им необходимые консультации, техническую документацию и обучение, что позволяет дилерам повысить свою компетентность и предлагать своим клиентам решения премиум-класса. Кроме того, специалисты ECOPRO-AV активно участвуют в маркетинговых мероприятиях.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="advantages-section section">
+    <div class="container">
+      <div class="section-title">Техническая сертификация <br>по максимуму направлений</div>
+      <div class="advantages">
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-backup.png" alt="">
+          </div>
+          <div class="advantages-item__title">Система резервного копирования</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-communications.png" alt="">
+          </div>
+          <div class="advantages-item__title">Унифицированные коммуникации</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-brackets.png" alt="">
+          </div>
+          <div class="advantages-item__title">Инженерная инфраструктура</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-network.png" alt="">
+          </div>
+          <div class="advantages-item__title">Система сетей передачи данных</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-router.png" alt="">
+          </div>
+          <div class="advantages-item__title">Беспроводные технологии</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-lock.png" alt="">
+          </div>
+          <div class="advantages-item__title">Техническая безопасность</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-videocamera.png" alt="">
+          </div>
+          <div class="advantages-item__title">Физическая безопасность</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-network.png" alt="">
+          </div>
+          <div class="advantages-item__title">Информационная безопасность</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-router.png" alt="">
+          </div>
+          <div class="advantages-item__title">Беспроводные технологии</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-lock.png" alt="">
+          </div>
+          <div class="advantages-item__title">Техническая безопасность</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-videocamera.png" alt="">
+          </div>
+          <div class="advantages-item__title">Физическая безопасность</div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item__image">
+            <img src="/images/advantages-network.png" alt="">
+          </div>
+          <div class="advantages-item__title">Информационная безопасность</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="awards-section">
+    <div class="container">
+      <div class="section-title">Награды за экспертизу в продажах и внедрении</div>
+      <div class="brands">
+        <div class="brands-item">
+          <img src="/images/temp-philips-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-samsung-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-lg-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-sony-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-philips-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-samsung-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-lg-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-sony-logo.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  const topMenuItemActive = 6;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
