--- a/parts/footer.html
+++ b/parts/footer.html
@@ -19,7 +19,7 @@
     <div class="footer-menu">
       <div class="menu">
         <div class="menu-title">Партнерам</div>
-        <a href="#" class="menu-item">Экспертиза</a>
+        <a href="/expertise.html" class="menu-item">Экспертиза</a>
         <a href="#" class="menu-item">Вендоры</a>
         <a href="#" class="menu-item">Импортозамещение</a>
       </div>
