--- a/parts/header.html
+++ b/parts/header.html
@@ -56,7 +56,7 @@
           <a href="#" class="menu-item__link">Скачать</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">Экспертиза</a>
+          <a href="/expertise.html" class="menu-item__link">Экспертиза</a>
         </div>
         <div class="menu-item">
           <a href="#" class="menu-item__link">О нас</a>
