Faces page html + css layout

--- a/about.html
+++ b/about.html
@@ -2,6 +2,13 @@
 
 <div class="container">
   <p>about о нас</p>
+  <a href="/faces.html">Лица компании</a>
 </div>
+
+
+
+<script>
+  const topMenuItemActive = 7;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
