--- a/parts/header.html
+++ b/parts/header.html
@@ -59,7 +59,7 @@
           <a href="/expertise.html" class="menu-item__link">Экспертиза</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">О нас</a>
+          <a href="/about.html" class="menu-item__link">О нас</a>
         </div>
         <div class="menu-item">
           <a href="#" class="menu-item__link">Стать партнером</a>
