--- a/parts/footer.html
+++ b/parts/footer.html
@@ -30,7 +30,7 @@
       </div>
       <div class="menu">
         <div class="menu-title">Компания</div>
-        <a href="#" class="menu-item">О компании</a>
+        <a href="/about.html" class="menu-item">О компании</a>
         <a href="#" class="menu-item">Как мы работаем</a>
         <a href="#" class="menu-item">Контакты</a>
         <a href="#" class="menu-item">Вакансии</a>
