About page html + css layout

--- a/about.html
+++ b/about.html
@@ -1,8 +1,262 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>about о нас</p>
-  <a href="/faces.html">Лица компании</a>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">О нас</div>
+  </div>
+</div>
+
+<div class="about-page">
+  <div class="columns-section section">
+    <div class="container">
+      <div class="columns-wrapper">
+        <div class="columns">
+          <div class="column-item column-item1">
+            <div class="column-item__title">30+</div>
+            <div class="column-item__text">лет успешной работы на рынке</div>
+          </div>
+          <div class="column-item column-item2">
+            <div class="column-item__title">ТОП 5</div>
+            <div class="column-item__text">лучших AV- дист-рибьюторов рейтинга CRN</div>
+          </div>
+          <div class="column-item column-item3">
+            <div class="column-item__title">50+</div>
+            <div class="column-item__text">известных брендов в товарном портфеле</div>
+          </div>
+          <div class="column-item column-item4">
+            <div class="column-item__title">50+</div>
+            <div class="column-item__text">известных брендов в товарном портфеле</div>
+          </div>
+          <div class="column-item column-item5">
+            <div class="column-item__title">50+</div>
+            <div class="column-item__text">известных брендов в товарном портфеле</div>
+          </div>
+        </div>
+        <div class="about-title">
+          <div class="company-name">ECOPRO-AV</div>
+          <div class="company-description">Крупнейший российский <br>дистрибьютор ProAV-оборудования <br>и эксперт на рынке мультимедийных <br>решений</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="directions-section section">
+    <div class="container">
+      <div class="section-title">Направления деятельности</div>
+      <div class="directions">
+        <div class="directions-item">
+          <div class="directions-image-wrapper">
+            <div class="directions-item__image">
+              <img src="/images/directions-distribution.jpg" alt="">
+            </div>
+            <div class="directions-item__filter"></div>
+          </div>
+          <div class="directions-item__title">Дистрибуция</div>
+          <div class="directions-item__description">Это может быть фраза из какого-то литературного произведения</div>
+        </div>
+        <div class="directions-item">
+          <div class="directions-image-wrapper">
+            <div class="directions-item__image">
+              <img src="/images/directions-install.jpg" alt="">
+            </div>
+            <div class="directions-item__filter"></div>
+          </div>
+          <div class="directions-item__title">Установка</div>
+          <div class="directions-item__description">Фраза из диалога каких-то людей, либо вообще вымышленная фраза</div>
+        </div>
+        <div class="directions-item">
+          <div class="directions-image-wrapper">
+            <div class="directions-item__image">
+              <img src="/images/directions-support.jpg" alt="">
+            </div>
+            <div class="directions-item__filter"></div>
+          </div>
+          <div class="directions-item__title">Техподдержка</div>
+          <div class="directions-item__description">Чаще все такой генератор используют в каких-либо коллективных играх</div>
+        </div>
+      </div>
+    </div> 
+  </div>
+
+  <div class="numbers-section section">
+    <div class="container">
+      <div class="numbers">
+        <div class="numbers-item numbers-item1">
+          <div class="numbers-item__title">5 000+</div>
+          <div class="numbers-item__text">Брендов в ассортименте</div>
+        </div>
+        <div class="numbers-item numbers-item2">
+          <div class="numbers-item__title">5 000+</div>
+          <div class="numbers-item__text">Дилеров</div>
+        </div>
+        <div class="numbers-item numbers-item3">
+          <div class="numbers-item__title">600+</div>
+          <div class="numbers-item__text">Реализованных проектов</div>
+        </div>
+        <div class="numbers-item numbers-item4">
+          <div class="numbers-item__title">50 000+</div>
+          <div class="numbers-item__text">Товарных позиций</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="brands-section section">
+    <div class="container">
+      <div class="section-title">Наш бренды</div>
+      <div class="brands">
+        <div class="brands-item">
+          <img src="/images/temp-philips-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-samsung-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-lg-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-sony-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-philips-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-samsung-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-lg-logo.jpg" alt="">
+        </div>
+        <div class="brands-item">
+          <img src="/images/temp-sony-logo.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="history-section section">
+    <div class="container">
+      <div class="section-title">История</div>
+      <div class="history">
+        <div class="history-item">
+          <div class="history-item__year">1990</div>
+          <div class="history-item__text">Крупнейший российский дистрибьютор ProAV-оборудования и эксперт на рынке мультимедийных решений</div>
+        </div>
+        <div class="history-item">
+          <div class="history-item__year">2010</div>
+          <div class="history-item__text">Крупнейший российский дистрибьютор ProAV-оборудования и эксперт на рынке мультимедийных решений</div>
+        </div>
+        <div class="history-item">
+          <div class="history-item__year">2018</div>
+          <div class="history-item__text">Крупнейший российский дистрибьютор ProAV-оборудования и эксперт на рынке мультимедийных решений</div>
+        </div>
+        <div class="history-item">
+          <div class="history-item__year">2020</div>
+          <div class="history-item__text">Крупнейший российский дистрибьютор ProAV-оборудования и эксперт на рынке мультимедийных решений</div>
+        </div>
+        <div class="history-item">
+          <div class="history-item__year">2022</div>
+          <div class="history-item__text">Крупнейший российский дистрибьютор ProAV-оборудования и эксперт на рынке мультимедийных решений</div>
+        </div>
+        <div class="history-item">
+          <div class="history-item__year">2024</div>
+          <div class="history-item__text">Крупнейший российский дистрибьютор ProAV-оборудования и эксперт на рынке мультимедийных решений</div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
+  <div class="faces-section section">
+    <div class="container">
+      <div class="page-title">Лица компании</div>
+      <div class="faces">
+        <div class="faces-item">
+          <div class="faces-item__photo">
+            <img src="/images/faces-photo.jpg" alt="">
+          </div>
+          <div class="faces-item__name">Александр <br>Марченко</div>
+          <div class="faces-item__position">Руководитель</div>
+          <div class="faces-item__filter"></div>
+        </div>
+        <div class="faces-item">
+          <div class="faces-item__photo">
+            <img src="/images/faces-photo.jpg" alt="">
+          </div>
+          <div class="faces-item__name">Александр <br>Марченко</div>
+          <div class="faces-item__position">Руководитель</div>
+          <div class="faces-item__filter"></div>
+        </div>
+        <div class="faces-item">
+          <div class="faces-item__photo">
+            <img src="/images/faces-photo.jpg" alt="">
+          </div>
+          <div class="faces-item__name">Александр <br>Марченко</div>
+          <div class="faces-item__position">Руководитель</div>
+          <div class="faces-item__filter"></div>
+        </div>
+      </div>
+
+      <h2>
+        <a href="/faces.html">Лица компании</a>
+      </h2>
+      
+
+
+
+    </div>
+  </div>
+
+  <div class="contacts-section">
+    <div class="container">
+      <div class="page-title">Контакты</div>
+      <div class="contacts">
+        <div class="contacts-item contacts-item-left">
+          <div class="contacts-item__title">Наш офис</div>
+          <div class="flex-container">
+            <div class="address ac-item">
+              <div class="ac-item__title">Адрес</div>
+              <div class="ac-item__text">г. Москва, улица,д.99</div>
+            </div>
+            <div class="address ac-item">
+              <div class="ac-item__title">Контакты</div>
+              <div class="ac-item__text">+7 999 548-88-88</div>
+              <div class="ac-item__text">info@mail.ru</div>
+            </div>
+          </div>
+          <div class="working-time-title">Режим работы</div>
+          <div class="working-time-hours">с 09:00 до 18:00</div>
+          <div class="working-time-days">Выходные дни:<br>суббота, воскресенье</div>
+          <div class="contacts-item__ellipse">
+            <img src="/images/contacts-ellipse-left.png" alt="">
+          </div>
+        </div>
+        <div class="contacts-item contacts-item-right">
+          <div class="contacts-item__title">Наш склад</div>
+          <div class="flex-container">
+            <div class="address ac-item">
+              <div class="ac-item__title">Адрес</div>
+              <div class="ac-item__text">г. Москва, улица,д.99</div>
+            </div>
+            <div class="address ac-item">
+              <div class="ac-item__title">Контакты</div>
+              <div class="ac-item__text">+7 999 548-88-88</div>
+              <div class="ac-item__text">info@mail.ru</div>
+            </div>
+          </div>
+          <div class="working-time-title">Режим работы</div>
+          <div class="working-time-hours">с 09:00 до 18:00</div>
+          <div class="working-time-days">Выходные дни:<br>суббота, воскресенье</div>
+          <div class="contacts-item__ellipse">
+            <img src="/images/contacts-ellipse-right.png" alt="">
+          </div>
+        </div>
+      </div>
+  </div>
+
 </div>
 
 
