--- a/expertise.html
+++ b/expertise.html
@@ -125,7 +125,7 @@
     </div>
   </div>
 
-  <div class="awards-section">
+  <div class="awards-section brands-section">
     <div class="container">
       <div class="section-title">Награды за экспертизу в продажах и внедрении</div>
       <div class="brands">
